Change title style

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
     <div class="color5"></div>
     <div class="color6"></div>
     <div class="color7"></div>
-    <h1 class="title">CSS
-      Free
-      Gradient
+    <h1 class="title">CSS-Only
+      Free Gradient
     </h1>
   </div>
 </body>
